fix alignment

--- a/packages/@adobe/spectrum-css-temp/components/menu/skin.css
+++ b/packages/@adobe/spectrum-css-temp/components/menu/skin.css
@@ -30,7 +30,7 @@ governing permissions and limitations under the License.
   --spectrum-heading-subtitle3-text-color: var(--spectrum-global-color-gray-900);
   background-color: var(--spectrum-selectlist-background-color);
   /* Define this var so it can be read from JS */
-  --spectrum-submenu-offset-distance-x: var(--spectrum-global-dimension-size-50);
+  --spectrum-submenu-offset-distance: var(--spectrum-global-dimension-size-65);
 }
 
 .spectrum-Submenu-headingWrapper {
